--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
 		<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0,maxmum-scale=1.0,minmum-scale=1.0,user-scalable=no" />
 		<title>2048</title>
 		<link href="css/2048.css" rel="stylesheet"/>
-		<!--<script type="text/javascript" src="js/jquery-1.11.3.min.js" ></script>-->
-		<script type="text/javascript" src="http://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script>
+		<script type="text/javascript" src="js/jquery-1.11.3.min.js" ></script>
 		
 		<script type="text/javascript" src="js/support2048.js"></script>
 		<script type="text/javascript" src="js/showanimation2048.js"></script>
 		<script type="text/javascript" src="js/main2048.js"></script>
-		<!--<script type="text/javascript" src="http://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script>-->
 		
 	</head>
 	<body>
