--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>2048</title>
 		<link href="css/2048.css" rel="stylesheet"/>
 		<script type="text/javascript" src="js/jquery-1.11.3.min.js" ></script>
-		
+		<!-- 注意三个js文件的引用顺序不能错位 -->
 		<script type="text/javascript" src="js/support2048.js"></script>
 		<script type="text/javascript" src="js/showanimation2048.js"></script>
 		<script type="text/javascript" src="js/main2048.js"></script>
